crates/prek/src/snapshots/prek__config__tests__language_version.snap
---
source: crates/prek/src/config.rs
expression: result
---
Ok(
    Config {
        repos: [
            Local(
                LocalRepo {
                    repo: "local",
                    hooks: [
                        LocalHook {
                            id: "hook-1",
                            name: "hook 1",
                            entry: "echo hello world",
                            language: System,
                            priority: None,
                            options: HookOptions {
                                alias: None,
                                files: None,
                                exclude: None,
                                types: None,
                                types_or: None,
                                exclude_types: None,
                                additional_dependencies: None,
                                args: None,
                                env: None,
                                always_run: None,
                                fail_fast: None,
                                pass_filenames: None,
                                description: None,
                                language_version: Some(
                                    "default",
                                ),
                                log_file: None,
                                require_serial: None,
                                stages: None,
                                verbose: None,
                                quiet: None,
                                minimum_prek_version: None,
                                _unused_keys: {},
                            },
                        },
                        LocalHook {
                            id: "hook-2",
                            name: "hook 2",
                            entry: "echo hello world",
                            language: System,
                            priority: None,
                            options: HookOptions {
                                alias: None,
                                files: None,
                                exclude: None,
                                types: None,
                                types_or: None,
                                exclude_types: None,
                                additional_dependencies: None,
                                args: None,
                                env: None,
                                always_run: None,
                                fail_fast: None,
                                pass_filenames: None,
                                description: None,
                                language_version: Some(
                                    "system",
                                ),
                                log_file: None,
                                require_serial: None,
                                stages: None,
                                verbose: None,
                                quiet: None,
                                minimum_prek_version: None,
                                _unused_keys: {},
                            },
                        },
                        LocalHook {
                            id: "hook-3",
                            name: "hook 3",
                            entry: "echo hello world",
                            language: System,
                            priority: None,
                            options: HookOptions {
                                alias: None,
                                files: None,
                                exclude: None,
                                types: None,
                                types_or: None,
                                exclude_types: None,
                                additional_dependencies: None,
                                args: None,
                                env: None,
                                always_run: None,
                                fail_fast: None,
                                pass_filenames: None,
                                description: None,
                                language_version: Some(
                                    "3.8",
                                ),
                                log_file: None,
                                require_serial: None,
                                stages: None,
                                verbose: None,
                                quiet: None,
                                minimum_prek_version: None,
                                _unused_keys: {},
                            },
                        },
                    ],
                    _unused_keys: {},
                },
            ),
        ],
        default_install_hook_types: None,
        default_language_version: None,
        default_stages: None,
        files: None,
        exclude: None,
        fail_fast: None,
        minimum_prek_version: None,
        orphan: None,
        _unused_keys: {},
    },
)
