crates/prek/src/snapshots/prek__config__tests__parse_repos-3.snap
---
source: crates/prek/src/config.rs
expression: result
---
Config {
    repos: [
        Local(
            LocalRepo {
                repo: "local",
                hooks: [
                    LocalHook {
                        id: "cargo-fmt",
                        name: "cargo fmt",
                        entry: "cargo fmt",
                        language: System,
                        priority: None,
                        options: HookOptions {
                            alias: None,
                            files: None,
                            exclude: None,
                            types: Some(
                                [
                                    "rust",
                                ],
                            ),
                            types_or: None,
                            exclude_types: None,
                            additional_dependencies: None,
                            args: None,
                            env: None,
                            always_run: None,
                            fail_fast: None,
                            pass_filenames: None,
                            description: None,
                            language_version: None,
                            log_file: None,
                            require_serial: None,
                            stages: None,
                            verbose: None,
                            quiet: None,
                            minimum_prek_version: None,
                            _unused_keys: {},
                        },
                    },
                ],
                _unused_keys: {
                    "unknown_field": String("some_value"),
                },
            },
        ),
    ],
    default_install_hook_types: None,
    default_language_version: None,
    default_stages: None,
    files: None,
    exclude: None,
    fail_fast: None,
    minimum_prek_version: None,
    orphan: None,
    _unused_keys: {},
}
